syntax = "proto3";

package openmatch;

option go_package = "./gen/pb";

import "google/protobuf/timestamp.proto";

message Ticket {
  string id = 1;
  Assignment assignment = 2;
  SearchFields search_fields = 3;
  bytes extensions = 4;
  google.protobuf.Timestamp create_time = 5;
}

message SearchFields {
  map<string, double> double_args = 1;
  map<string, string> string_args = 2;
  repeated string tags = 3;
}

message Assignment {
  string connection = 1;
  bytes extensions = 2;
}
